kubernetesTemplate/photos & video/immich/00-immich-ns.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: photos-videos
